# mousetrap-3.17

./: .gitignore  .travis.yml  HACKING.md  Makefile.am  NEWS  README.md  autogen.sh  configure.ac  mousetrap.doap  setup.py
src/mousetrap/: __init__.py  bus.py  config.py  config.yaml  core.py  engine.py  gui.py  helpers.py  i18n.py  image.py  main.py  mousetrap.yaml  service.py  vision.py
src/mousetrap/bright object standalone/: brightest_object_spike.py
src/mousetrap/components/: camera.py  display.py  glib.py  interface.py
src/mousetrap/engine/: __init__.py  bus.py  component.py  conf.py  engine.py  log.py
src/mousetrap/engine/tests/: test_bus.py  test_engine.py
src/mousetrap/locale/hu/LC_MESSAGES/: mousetrap.po
src/mousetrap/locale/pt_BR/LC_MESSAGES/: mousetrap.po
src/mousetrap/plugins/: bright.py  bright_object.py  bright_object_joystick.py  camera.py  display.py  eyes.py  nose.py
src/mousetrap/tests/: patches.py  run_python_tests.py  test_bus.py  test_config.py  test_core.py  test_gui.py  test_vision.py
